--- a/style.css
+++ b/style.css
@@ -38,6 +38,18 @@ Grey #ECF0F1
   box-sizing: border-box;
 }
 
+.transit {
+  -webkit-transition: all .15s linear;
+     -moz-transition: all .15s linear;
+       -o-transition: all .15s linear;
+          transition: all .15s linear;
+}
+
+
+.smuth {
+  scroll-behavior: smooth;
+}
+
 .wrap {
   width: 100%;
   padding: 3.5em 0;
@@ -521,6 +533,11 @@ blockquote p {
   background-image: url('images/parallax2.jpg');
 }
 
+.parallax3 {
+  background-image: url('images/parallax3.jpg');
+}
+
+
 .parallax-section .content, .top-slider .content-header, .home-slider {
   margin: 0 auto;
   text-align: center;
@@ -531,6 +548,10 @@ blockquote p {
 }
 
 .parallax2 .content {
+  padding: 100px 0;
+}
+
+.parallax3 .content {
   padding: 100px 0;
 }
 
@@ -1106,8 +1127,8 @@ blockquote p {
 ********************************************************* */
 
 .map {
-  width: 100%;
-  height: 700px;
+  width: 0%;
+  height: 0px;
   overflow: hidden;
 }
 
